
Update to add option to simply dump trace names

----------
pellauer    Date: Wed Jun 10 14:44:57 EDT 2009  CSN: CSN-awb-308
                  Wed Jun 10 18:44:57 UTC 2009


Directory etc
 asim.pack                 Locally Modified          307 


Updating name of public AWB repository to be "awb" from "awb-mit".

Michael P.

----------
pellauer    Date: Wed Jun 10 17:26:58 EDT 2009  CSN: CSN-awb-309
                  Wed Jun 10 21:26:58 UTC 2009


Directory libperl/Asim/lib
 Asim.pm.in                Locally Modified          308 


* Added Libdir and Includedir to Asim.pm.

Michael P.


----------
pellauer    Date: Thu Jun 11 14:33:33 EDT 2009  CSN: CSN-awb-310
                  Thu Jun 11 18:33:33 UTC 2009


Directory libperl/Asim/lib/Asim/Workspace
 Template.pm               Locally Modified          309 


* Update broken searchpath in Template.

Michael P.


----------
emer        Date: Fri Jul 17 08:26:00 EDT 2009  CSN: CSN-awb-311
                  Fri Jul 17 12:26:00 UTC 2009


Directory tools/scripts
 asimstarter.in            Locally Modified          310 

Use regular expression parsing of perl version instead of integer
arithmetic. This should fix the parsing problems with perl 5.10.0.

----------
emer        Date: Fri Jul 17 09:56:40 EDT 2009  CSN: CSN-awb-312
                  Fri Jul 17 13:56:40 UTC 2009


Directory tools/scripts
 asimstarter.in            Locally Modified          311 

Removed some obsolete tools from asimstarter.

----------
emer        Date: Tue Jul 28 18:15:47 EDT 2009  CSN: CSN-awb-313
                  Tue Jul 28 22:15:47 UTC 2009


Directory etc/repositories.d
 mit-6.375.pack            Locally Added               0 

Added repository for 6.375 class.

----------
emer        Date: Tue Jul 28 18:17:34 EDT 2009  CSN: CSN-awb-314
                  Tue Jul 28 22:17:34 UTC 2009


Directory etc/repositories.d
 mit-6.375.pack            Locally Modified          313 

Fix typo in comment.